--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.github.krokyze:ucropnedit:2.2.6-2'
     implementation 'com.google.firebase:firebase-firestore:24.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
 
 
     testImplementation 'junit:junit:4.13.2'
