--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,18 +35,32 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation platform('com.google.firebase:firebase-bom:32.1.1')
+    implementation platform('com.google.firebase:firebase-bom:32.2.3')
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-analytics:21.3.0'
-    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:22.1.1'
     implementation 'com.google.firebase:firebase-database:20.2.2'
     implementation 'com.google.firebase:firebase-storage:20.2.1'
-    implementation 'com.google.firebase:firebase-messaging:23.1.2'
-    implementation 'com.hbb20:ccp:2.7.2'
+    implementation 'com.google.firebase:firebase-messaging:23.2.1'
+    implementation 'com.hbb20:ccp:2.7.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'com.github.krokyze:ucropnedit:2.2.6-2'
-    implementation 'com.google.firebase:firebase-firestore:24.6.1'
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.github.krokyze:ucropnedit:2.2.8'
+    implementation 'com.google.firebase:firebase-firestore:24.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
+
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
 
 
