--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.WRITE_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <application
+    <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -22,7 +22,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.RU_Foody"
+        tools:replace="android:theme"
         tools:targetApi="31">
+        <activity
+            android:name=".customerFoodPanel.OrderDish"
+            android:exported="false" />
+        <activity
+            android:name=".chefFoodPanel.ChefOrdertobePrepareView"
+            android:exported="false" />
+        <activity
+            android:name=".chefFoodPanel.ChefPreparedOrder"
+            android:exported="false" />
+        <activity
+            android:name=".chefFoodPanel.ChefOrderTobePrepared"
+            android:exported="false" />
         <activity
             android:name=".chefFoodPanel.UpdateDelete_Dish"
             android:exported="false" />
