--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,27 @@
 buildscript {
     repositories {
         google()
+        jcenter()
         mavenCentral()
         maven {url='https://jitpack.io'}
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
+
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
+    id 'com.android.application' version '8.1.1' apply false
+    id 'com.android.library' version '8.1.1' apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven{url "https://jitpack.io"}
+        mavenCentral()
+
+    }
 }
